# simple-rag

./: CLAUDE.md  pyproject.toml  pytest.ini
src/rag/: app.py  db.py  llm.py
src/rag/adapters/: db.py  embedders.py  language_models.py  vector_dbs.py
src/rag/app/: dependencies.py  main.py  models.py
src/rag/app/templates/: index.html
src/rag/core/: ports.py  services.py
src/rag/templates/: index.html
tests/: test_app.py  test_embedders.py  test_language_models.py  test_llm.py
